# mint

./: .env.example  .gitignore  404.html  LICENSE  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  eslint.config.mjs  index.html  mkdocs.yml  nest-cli.json  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sitemap.xml  tsconfig.json
.github/workflows/: deploy-docs.yml  docs.yml  jest-test.yml  pytest.yml  test.yml
about/contributing/: index.html
about/license/: index.html
api/auth/: index.html
api/transactions/: index.html
api/wallet/: index.html
apps/admin/: Dockerfile  Dockerfile.dev  tsconfig.app.json  webpack.config.js
apps/analytics/: Dockerfile  Dockerfile.dev  tsconfig.app.json
apps/audit/: Dockerfile  Dockerfile.dev  tsconfig.app.json
apps/auth/: .gitignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
apps/auth/src/: create_admin.py
apps/auth/src/auth/: hooks.py  main.py
apps/auth/src/auth/core/: fastauth_config.py  settings.py
apps/auth/src/auth/email_templates/: password_reset.jinja2  verification.jinja2  welcome.jinja2
apps/auth/src/auth/kafka/: producer.py  router.py
apps/auth/src/auth/users/: router.py
apps/fraud/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  prisma.config.ts  tsconfig.app.json  webpack.config.js
apps/kyc/: Dockerfile  Dockerfile.dev  tsconfig.app.json  webpack.config.js
apps/notifications/: Dockerfile  Dockerfile.dev  prisma.config.ts  tsconfig.app.json  webpack.config.js
apps/social/: Dockerfile  Dockerfile.dev  (+3 more)
apps/wallet/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  pyproject.toml
apps/wallet/src/: migrate.py
apps/wallet/src/alembic/: env.py
apps/wallet/src/wallet/: main.py
apps/wallet/src/wallet/core/: jwks.py
apps/wallet/src/wallet/db/: __init__.py
apps/wallet/src/wallet/grpc/: __init__.py  server.py  servicer.py
apps/wallet/src/wallet/kafka/consumers/: auth_events.py  schema.py  transaction_events.py
apps/wallet/src/wallet/models/: __init__.py  balance_history.py  wallet.py
apps/wallet/src/wallet/utils/: generate_id.py
apps/wallet/tests/: conftest.py  helpers.py  test_auth_events.py  test_servicer.py  test_wallet_admin_routes.py  test_wallet_user_routes.py
architecture/: index.html
auth/: .dockerignore  .env.docker.example  .env.test  .prettierignore  Dockerfile  README.md  eslint.config.mts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
bruno/: bruno.json  config.json
deployment/: index.html
design-decisions/: index.html
development/: index.html
docs/: README.md  architecture.md  deployment.md  design-decisions.md  development.md  events.md  index.md  infrastructure.md  monitoring.md  running.md  services.md  testing.md  troubleshooting.md
events/: index.html
gateway/: .gitignore  package.json
infrastructure/: index.html
loki/: alloy.hcl  loki-config.yaml
monitoring/: index.html
nginx/: nginx.conf
notifications/: .env.docker.example  .env.test  .gitignore  Dockerfile  package.json  pnpm-lock.yaml  vitest.config.ts
prometheus/: prometheus.yml
running/: index.html
scripts/: generate-keys.sh  generate_proto.py
search/: search_index.json
services/: index.html
services/auth/: .dockerignore  .env.example  Dockerfile  index.html  pyproject.toml
services/auth/scripts/: __init__.py
services/auth/src/: cli.py  migrate.py
services/auth/src/alembic/: env.py
services/auth/src/alembic/versions/: 9cd608c37ab2_migration.py  b971775e308c_migration.py
services/auth/src/auth/: hooks.py  main.py
services/auth/src/auth/core/: fastauth_config.py  settings.py
services/auth/src/auth/kafka/: producer.py
services/wallet/: Dockerfile  alembic.ini  index.html  pyproject.toml
services/wallet/src/alembic/: env.py
services/wallet/src/alembic/versions/: 0e3445830ce2_migration.py  3db1d45426e7_migration.py  50becfb77dd8_migration.py  ed93e7a28d1a_migration.py
services/wallet/src/wallet/: main.py
services/wallet/src/wallet/core/: deps.py  settings.py
services/wallet/src/wallet/db/: session.py
services/wallet/src/wallet/kafka/consumers/: auth_events.py
services/wallet/src/wallet/models/: balance_history.py  wallet.py
services/wallet/src/wallet/routes/: kafka.py  wallet_admin.py  wallet_user.py
shared-py/: pyproject.toml
testing/: index.html
transaction/: .gitignore  Dockerfile  README.md  package.json
transactions/: .env.docker.example  .env.test  .gitignore  Dockerfile  Dockerfile.test  package.json  pnpm-lock.yaml  tsconfig.json
troubleshooting/: index.html
wallet/: .env.docker.example  .env.test  .gitignore  .prettierrc.json  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
web/: .dockerignore  Dockerfile  eslint.config.js  nginx.conf  package.json  vite.config.ts
(+575 files in other folders)
