[project]
name = "mint"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["services/auth", "services/wallet", "shared-py"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
