[project]
name = "mint-wallet"
version = "2.0.0"
description = "wallet service for mint"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "cuid2>=2.0.1",
    "fastapi[all]>=0.135.1",
    "joserfc>=1.6.3",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "mint-shared",
    "asyncpg>=0.31.0",
    "faststream[kafka]>=0.6.7",
    "grpcio-tools>=1.80.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-instrumentation-grpc>=0.46b0",
]

[project.scripts]
dev            = "wallet.main:start"
makemigrations = "cli:makemigrations"
migrate        = "cli:migrate"
downgrade      = "cli:downgrade"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wallet"]
sources  = ["src"]

[tool.uv.sources]
mint-shared = { workspace = true }

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "tests"]
