[project]
name = "mint-wallet"
version = "2.0.0"
description = "wallet service for mint"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "cuid2>=2.0.1",
    "fastapi[all]>=0.135.1",
    "joserfc>=1.6.3",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.48",
]

[project.scripts]
dev = "wallet.main:start"
makemigrations = "cli:makemigrations"
migrate       = "cli:migrate"
downgrade     = "cli:downgrade"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wallet"]
sources  = ["src"]
